# atc-heat-pump

./: .gitignore  Dockerfile.api  LICENSE  README.md  requirements.txt
Optimization/: Hackaton.ipynb  data.json  electricity_prices.py  hackaton.py  main.py  pyproject.toml  readMe.md  requirments.txt  results.json  thermal_model.py
Optimization/ExternalAPI/: api_electricity.py  api_temperature_Braganca.py  electricity_prices.py  temperatures_values.py  try.ipynb
Optimization/data/: ourData.json  temp_data.json
Optimization/data/marginalpdbcpt_2021/: marginalpdbcpt_20210101.1  marginalpdbcpt_20210102.1  marginalpdbcpt_20210103.1  marginalpdbcpt_20210104.1  marginalpdbcpt_20210105.1  marginalpdbcpt_20210106.1  marginalpdbcpt_20210107.1  marginalpdbcpt_20210108.1  marginalpdbcpt_20210109.1  marginalpdbcpt_20210110.1  marginalpdbcpt_20210111.1  marginalpdbcpt_20210112.1  marginalpdbcpt_20210113.4  marginalpdbcpt_20210114.1  marginalpdbcpt_20210115.1  marginalpdbcpt_20210116.1  marginalpdbcpt_20210117.1  marginalpdbcpt_20210118.1  marginalpdbcpt_20210119.1  marginalpdbcpt_20210120.1  marginalpdbcpt_20210121.3  marginalpdbcpt_20210122.2  marginalpdbcpt_20210123.1  marginalpdbcpt_20210124.1  marginalpdbcpt_20210125.1  marginalpdbcpt_20210126.1  marginalpdbcpt_20210127.1  marginalpdbcpt_20210128.1  marginalpdbcpt_20210129.1  marginalpdbcpt_20210130.1  marginalpdbcpt_20210131.1  marginalpdbcpt_20210201.1  marginalpdbcpt_20210202.1  marginalpdbcpt_20210203.1  marginalpdbcpt_20210204.1  marginalpdbcpt_20210205.1  marginalpdbcpt_20210206.1  marginalpdbcpt_20210207.1  (+266 more)
(+17 files in other folders)
