[tool.poetry]
name = "hackaton"
version = "0.1.0"
description = ""
authors = ["Rui Melo <rufimelo99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.2"
flask = "^2.2.2"
pandas = "^1.5.0"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
